# hpc

./: .gitignore  README.md
.claude/: claude.md
c/: README.md
c/.claude/: claude.md
c/learning/: Makefile  README.md
c/samples/: .gitignore  CURRICULUM_OVERVIEW.md  GETTING_STARTED.md  Makefile  test_compilation.sh
cpp/: README.md
cpp/.claude/: claude.md
cpp/learning/: Makefile  README.md
cpp/samples/: COMPILATION_STATUS.md  COMPLETE_SUMMARY.md  LEARNING_PATH.md  MODULES_SUMMARY.md  Makefile  README.md  test_all_modules.sh
cpp/samples/12-build-debug/: CMakeLists.txt  Makefile
cuda/: README.md
cuda/.claude/: claude.md
cuda/learning/: Makefile  README.md
cuda/samples/: .gitignore  CURRICULUM_COMPLETE.md  ENHANCEMENT_COMPLETE.md  EXAMPLES_SHOWCASE.md  FCC_CUDA_COLAB_COMPLETE.md  FINAL_STATUS.md  GENERATION_COMPLETE.md  LOCAL_CUDA_COMPLETE.md  NOTEBOOKS_FIXED.md  NOTEBOOKS_STATUS_FINAL.md  NOTEBOOK_FIX_SUMMARY.md  PHASES_3_TO_9_COMPLETE.md  QUICK_START.md  README.md  START_HERE.md  VERIFICATION_FINAL_REPORT.md  convert_cuda_to_colab.py  enhance_phase8_9.py  enhance_phase8_9_part2.py  enhance_phase9.py  fix_all_notebooks.py  fix_all_notebooks_final.py  fix_all_properly.py  fix_notebooks_properly.py  fix_notebooks_properly_part2.py  fix_remaining_cu_files.py  generate_all_local_cuda.py  generate_all_missing_cu.py  generate_all_phases.py  generate_local_cuda.py  generate_phases_3_to_9.py  generate_phases_3_to_9_complete.py  generate_phases_5_to_9.py  verify_all_files.py  verify_notebook_updates.py  verify_real_issues.py
docs/: README.md  migration-notes.md
python/: README.md
python/.claude/: claude.md
python/learning/: .gitignore  Makefile  QUICKSTART.md  README.md  add_homework_exercises.py  diagnose.sh
python/samples/: GETTING_STARTED.md  LEARNING_PATH.md  Makefile  README.md  (+7 more)
scripts/: README.md  clean-all.sh  setup.sh  test-all.sh
(+1160 files in other folders)
